# apecx-harvesters

./: .gitignore  pyproject.toml
benchmarks/: FINDINGS.md  entity_split.py  harmonization_9source_loop.py  harmonization_ablation.py  harmonization_refine_loop.py  precision_audit.py  recall_oracle.py  test_entity_split.py  test_harmonization_9source_loop.py  test_harmonization_refine_loop.py  test_precision_audit.py  test_recall_oracle.py  test_viral_structure_proxy.py  viral_structure_proxy.py
benchmarks/queries/: abbreviations.txt  curated_aliases.tsv  real_world.txt
design/: GLOBUS_INDEX_HARMONIZATION_PLAN.md  GLOBUS_INDEX_HARMONIZATION_TASKS.md  GLOBUS_SOURCE_PATTERN.md  ONTOLOGY_ENRICHMENT_PLAN.md  ONTOLOGY_GAPS_CANDIDATES.md  ONTOLOGY_TASKS.md  OPEN_QUESTIONS.md  RESOLUTION_SURFACE.md  SYNONYM_COMPLETENESS_PLAN.md
docs/: backend_arm_runbook.md  harmonization_test_queries.md  harmonization_user_questions.md  two_arm_contract.md  user_facing_arm_install.md
scripts/: audit_field_coverage.py  republish_sources.py  verify_species_expansion.py
search_demo/agent-skill-harmonized/: SKILL.md
search_demo/agent-skill-harmonized/references/: harmonization-wins.md  query-api.md  schema.json
search_demo/agent-skill-harmonized/scripts/: harmonized_query.py  test_harmonized_query.py
src/apecx_harvesters/: query_intent.py
src/apecx_harvesters/dict_reader/: __init__.py  bootstrap.py  cli.py  enums.py  loader.py  lookup.py  normalization.py  schema.py  sqlite_reader.py
src/apecx_harvesters/loaders/antiviraldb/: __init__.py  model.py  parser.py
src/apecx_harvesters/loaders/base/: model.py  uniprot_client.py
src/apecx_harvesters/mcp_surface/: __init__.py  _discover.py  _envelope.py  _objects.py  _operations.py  _session.py  _visibility.py  server.py
src/apecx_harvesters/pipeline/: canonical_resolver_adapter.py  corpus_mining.py  corpus_mining_extractors.py  globus_source.py  harmonize.py  republish_with_canonical.py  violin_crosswalk.py
src/apecx_harvesters/scripts/: harmonize_and_publish.py  phase0_antiviraldb.py  publish_viral_harmonized.py  run_full_harmonization.py
tests/: test_antiviraldb.py  test_base_schema.py  test_bvbrc_epitope.py  test_bvbrc_genome.py  test_bvbrc_protein.py  test_bvbrc_protein_structure.py  test_canonical_resolver_adapter.py  test_corpus_mining.py  test_corpus_mining_extractors.py  test_dict_bootstrap.py  test_dict_reader.py  test_emdb.py  test_harmonize.py  test_mcp_server.py  test_pdb.py  test_pipeline.py  test_protabank.py  test_republish_roundtrip.py  test_uniprot_client.py  test_violin_crosswalk.py  test_violin_gene.py  test_violin_pathogen.py  test_violin_vaccine.py
tests/fixtures/: emdb_EMD-34119.json  pdb_graphql_1omw.json  pdb_graphql_4zt0.json  pdb_graphql_6m0j.json
(+38 files in other folders)
