[project]
name = "apecx-harvesters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # TODO: globus-sdk is not currently imported anywhere in src/; verify if still needed
    "globus-sdk>=4.5.0",
    "httpx>=0.28.1",
    "orjson>=3.11.7",
    "pydantic>=2.12.5",
]

[project.scripts]
aggregate-gsearch = "apecx_harvesters.scripts.aggregate_gsearch:main"
search-author = "apecx_harvesters.scripts.search_author:main"
search-topic = "apecx_harvesters.scripts.search_topic:main"
# dict_reader CLIs (user-facing arm; only deps are pydantic + stdlib).
apecx-lookup = "apecx_harvesters.dict_reader.cli:lookup_main"
apecx-dict-update = "apecx_harvesters.dict_reader.cli:update_main"

[project.optional-dependencies]
# Thin extra for the user-facing arm. Installing apecx-harvesters[reader]
# pulls only the dict_reader + bootstrap path with no harvester deps —
# the lookup CLI and Globus-published-dict bootstrap work standalone.
#
# MCP access to the harmonization layer goes through apecx-mcp-integration
# (canonical MCP surface). The previous standalone apecx-mcp-reader was
# removed 2026-06-09 because it duplicated apecx_integration's
# resolve_canonical_entity + globus_search tools.
reader = [
    "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apecx_harvesters"]

# NOTE 2026-06-09: the force-include of search_demo/agent-skill-harmonized
# into the wheel was removed alongside the apecx-mcp-reader deletion.
# Wheel users don't reference those assets — Claude Code reads them from
# the source-checkout location directly. If a wheel consumer needs the
# skill bundle programmatically again, re-enable the force-include here.

[tool.uv]
package = true

[tool.ruff]
line-length = 100
exclude = ["prior_art"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["prior_art"]
# venvPath/venv: needed by standalone Claude Code's pyright LSP (runs outside venv).
# Without these, the LSP reports spurious reportMissingImports on all third-party packages. 
#    It also sometimes experiences transient errors after file moves
# Does not interfere with IDE or `uv run pyright`. 
venvPath = "."
venv = ".venv"



[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
    "respx>=0.23.1",
    "ruff>=0.15.8",
]
prior_art = [
    "dotenv>=0.9.9",
    "lxml>=6.0.2",
    "numpy>=2.0.0",
    "pandas>=3.0.1",
    "rcsb-api>=1.7.0",
    "requests>=2.33.0",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.48",
]
